--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.images }}/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ site.images }}/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.images }}/favicon/favicon-16x16.png">
-<link rel="manifest" href="{{ site.images }}/favicon/manifest.json">
+<!-- <link rel="manifest" href="{{ site.images }}/favicon/manifest.json"> -->
 <link rel="mask-icon" href="{{ site.images }}/favicon/safari-pinned-tab.svg" color="#0d5fff">
 <link rel="shortcut icon" href="{{ site.images }}/favicon/favicon.ico">
 <meta name="msapplication-config" content="{{ site.images }}/favicon/browserconfig.xml">
