--- a/_includes/ensemble-listing.html
+++ b/_includes/ensemble-listing.html
@@ -2,7 +2,7 @@
 <section class="module">
   <div class="row m-b-100">
     <div class="col-md-12">
-      <h2 class="text-center"><a class="offset" id="musicians">Musicians</a></h2>
+      <h2 class="text-center"><a class="offset" id="musicians">Ensemble</a></h2>
     </div>
     {%- for person in site.data.members -%}
       <div class="col-sm-6 col-md-4 mx-auto">
