--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -127,3 +127,7 @@ footer aside .fa {
 .widget ol li, .widget ul li {
     border-bottom: 0px solid rgba(238, 238, 238, .9);
 }
+
+.footer_width{width: 100%;}
+.footer_full_width{width: 100%; padding-left: 0px; padding-right: 0px;}
+.no-padding{padding-left: 0px; padding-right: 0px;}
