--- a/_includes/home-latest-performances.html
+++ b/_includes/home-latest-performances.html
@@ -1,13 +1,15 @@
 <div class="latest-performance">
+
 	{% assign performancePosts = site.posts | where_exp:"item", "item.categories contains 'performance'" %}
 	<ul>
+
 		{%- for post in performancePosts limit:8 -%}
 				<li>
 					<span class="post-date">{{ post.date | date: "%B %d, %Y" }}</span>
 						{%- if post.country -%}
-							<a href="{{ post.url }}">{{ post.describe }}<br />{%- if post.event -%}{{ post.event }}<br />{%- endif -%}{%- if post.location.venue -%}{{ post.location.venue }}<br />{%- endif -%}{{ post.location.city }}, {{ post.location.country }}</a>
+						<a data-fancybox data-type="iframe" href="{{ post.url }}" target="_blank"><div class="row justify-content-start"><div class="col-5"><img src="{{ site.images }}/{{ post.thumbnail }}" class="rounded media-left img-fluid" alt=""></div><div class="media-body col-8">{{ post.describe }}<br />{%- if post.event -%}{{ post.event }}<br />{%- endif -%}{%- if post.location.venue -%}{{ post.location.venue }},&nbsp;{%- endif -%}{{ post.location.city }}, {{ post.location.country }}<br /></div></div></a>
 						{%- else -%}
-							<a href="{{ post.url }}">{{ post.describe }}<br />{%- if post.event -%}{{ post.event }}<br />{%- endif -%}{%- if post.location.venue -%}{{ post.location.venue }}<br />{%- endif -%}{{ post.location.city }}, {{ post.location.state }}</a>
+						<a data-fancybox data-type="iframe" href="{{ post.url }}" target="_blank"><div class="row justify-content-start"><div class="col-5"><img src="{{ site.images }}/{{ post.thumbnail }}" class="rounded media-left img-fluid" alt=""></div><div class="media-body col-8">{{ post.describe }}<br />{%- if post.event -%}{{ post.event }}<br />{%- endif -%}{%- if post.location.venue -%}{{ post.location.venue }},&nbsp;{%- endif -%}{{ post.location.city }}, {{ post.location.state }}</div></div></a>
 						{%- endif -%}
 				</li>
 		{% endfor %}
