--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,3 +7,14 @@
 
   gtag('config', 'UA-109407029-1');
 </script>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-56354185-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-56354185-2');
+</script>
