reverse photo gallery chron

--- a/_includes/photos-portfolio-masonry.html
+++ b/_includes/photos-portfolio-masonry.html
@@ -1,4 +1,4 @@
-{%- assign imageFiles = site.static_files | where: "image", true -%}
+{%- assign imageFiles = site.static_files | where: "image", true | sort: 'date' | reverse  -%}
 
 <!-- Portfolio-->
 <div class="container-fluid">
