small html load time optimizations

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,12 +28,12 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- Web Fonts-->
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Lora:400i|Poppins:600,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Lora:400i|Poppins:600,700" rel="stylesheet" defer>
 <!-- Bootstrap core CSS-->
-<link href="{{ site.assets }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.assets }}/bootstrap/css/bootstrap.min.css" rel="stylesheet" defer>
 <!-- Plugins and Icon Fonts-->
-<link href="{{ site.assets }}/css/plugins.min.css" rel="stylesheet">
+<link href="{{ site.assets }}/css/plugins.min.css" rel="stylesheet" defer>
 <!-- Template core CSS-->
-<link href="{{ site.assets }}/css/template.css" rel="stylesheet">
+<link href="{{ site.assets }}/css/template.css" rel="stylesheet" defer>
 <!-- Switch~ CSS-->
-<link href="{{ site.assets }}/css/switch.css" rel="stylesheet">
+<link href="{{ site.assets }}/css/switch.css" rel="stylesheet" defer>
