edited background-color for bg-dark

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -3433,6 +3433,7 @@ body.off-canvas-sidebar-open .layout {
 .bg-dark,
 .bg-gradient {
     color: #fff;
+    background-color: #222;
 }
 
 .bg-dark h1,
